--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "colorful-movies-backend",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "nodemon app.js"
   },
   "dependencies": {
-    "express": "~4.16.0",
+    "express": "^4.16.4",
     "nodemon": "^1.18.10"
   }
 }
