--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     env_file: .env
     volumes:
       - .:/usr/afterimage-backend
-      - /usr/node_modules
+      - /usr/afterimage-backend/node_modules
     ports:
       - "3001:3001"
